(WIP) Api path /products (ProductList)
- ApiManager cleanup
- ProductManager cleanup + listing methods
- ProductList presenter and manager
- OpenAPI cleanup + update
